fix: set a much bigger value for z-index of result panel
issue(#143)

--- a/src/content/display/style/display.styl
+++ b/src/content/display/style/display.styl
@@ -10,7 +10,7 @@
     top: 0;
     left: 0;
     box-sizing: border-box;
-    z-index: 10000000;
+    z-index: 2147483648;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
